static/css/styles.css
/* ... */
.project__content {
	line-height: 1.6em;
}

.project__video {
	width: 100%;
	min-height: 200px;
	margin-bottom: 30px;
}
@media only screen and (min-width: 768px) {
	.project__video {
		min-height: 320px;
	}
}

.project__image-container {
	width: 100%;
}
@media only screen and (min-width: 768px) {
	.project__image-container {
		width: 80%;
		margin: 0 auto;
	}
}

/* =============
 * Campaign page
 * ============= */

.campaign__external-link {
	margin: 20px 15px;
	padding: 8px 10px;
	float: right;
	background-color: #16b475;
	font-weight: 500;
	font-size: 1.1em;
	color: white;
}
@media only screen and (min-width: 768px) {
	.campaign__external-link {
		margin: 35px 90px;
	}
}
.campaign__external-link:hover {
	color: white;
}

.story-funding__carousel {
	padding: 0;
}

.story-funding__carousel-item {
	display: block;
	color: #414042;
}

.story-funding__row {
	margin: 30px 0;
}

.story-funding__article {
	display: block;
	color: #414042;
}
.story-funding__article:hover {
	color: #16b475;
}

.story-funding__image--black {
	width: 100%;
}

.story-funding__image--color {
	width: 100%;
}

.story-funding__turn {
	margin: 8px 0;
	font-weight: 500;
	font-size: 0.8em;
}

.story-funding__title {
	margin-bottom: 10px;
	font-weight: 700;
	font-size: 1.3em;
}
@media only screen and (max-width: 767px) {
	.story-funding__title {
		color: #16b475;
	}
}

.story-funding__subtitle {
	margin-bottom: 10px;
	padding-bottom: 10px;
	font-weight: 500;
	border-bottom: solid 1px #bebebe;
}

.story-funding__content {
	line-height: 1.8em;
}

/* ==============
 * Civictech page
 * ============== */

.civictech__pingkorea-link {
	margin: 20px 0;
	padding: 8px 10px;
	float: right;
	background-color: #16b475;
	font-weight: 500;
	font-size: 1.1em;
	color: white;
}
@media only screen and (min-width: 768px) {
	.civictech__pingkorea-link {
		margin: 35px 90px;
	}
}
.civictech__pingkorea-link:hover {
	color: white;
}

/* =================
 * Collaboration page
 * ================== */

.collaboration__lecture-title {
	margin: 35px 0;
	font-weight: 700;
	font-size: 1.3em;
	color: #414042;
}

.collaboration__lecture-detail {
	margin-bottom: 20px;
	line-height: 1.8em;	
	color: #414042;
}

.collaboration__news-link {
	margin: 0 0 40px 12px; 
	padding: 8px 10px;
	float: right;
	background-color: #16b475;
	font-weight: 500;
	font-size: 1.1em;
	color: white;
}
.collaboration__news-link:hover {
	color: white;
}

/* ==============
 * Community page
 * ============== */

@media only screen and (max-width: 767px) {
	.community__partners {
		padding: 0;
	}
}

.community__partner-logo {
	display: block;
	border: solid 1px #bebebe;
}

/* ===============
 * WAGL-PEDIA page
 * =============== */

.waglpedia__intro {
	margin: 0 auto;
	font-weight: 500;
	font-size: 1.1em;
	color: #16b475;
	line-height: 1.8em;
}
@media only screen and (min-width: 768px) {
	.waglpedia__intro {
		margin: -50px auto 0 auto;
		font-size: 1.3em;
		text-align: center;
	}
}

.waglpedia__intro--light {
	margin-top: 10px;
	font-weight: 500;
	font-size: 0.9em;
	color: #bcbec0;
	cursor: pointer;
}
@media only screen and (min-width: 768px) {
	.waglpedia__intro--light {
		text-align: center;
	}
}

.waglpedia__tags {
	margin-bottom: 10px;
	font-size: 0.8em;
	color: #bcbec0;
}
@media only screen and (min-width: 768px) {
	.waglpedia__tags {
		font-size: 1.0em;
	}
}

.waglpedia__tag {
	cursor: pointer;
}

.waglpedia__tag:hover {
	color: #16b475;
}

.waglpedia__tag--active {
	color: #16b475;
}

.waglpedia__service {
	margin-bottom: -2px;
	border-top: 1px solid #D3D3D5;
	border-bottom: 1px solid #D3D3D5;
	text-align: center;
	cursor: pointer;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service {
		margin-bottom: -4px;
	}
}

@media only screen and (min-width: 768px) {
	.waglpedia__service--center {
		border-left: 1px solid #D3D3D5;
		border-right: 1px solid #D3D3D5;
	}
}

.waglpedia__service-summary--default {
	padding: 30px 0;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-summary--default {
		height: 350px;
		padding: 60px 0;
	}
}

.waglpedia__service-summary--active {
	margin: 0 -15px;
	padding: 30px 15px;
	background-color: #16b475;
	color: white;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-summary--active {
		height: 350px;
		padding: 60px 0;
	}
}

.service-summary__title {
	font-weight: 700;
	font-size: 2.5em;
}

.service-summary__content {
	margin-top: 30px;
	line-height: 1.7em;
}
@media only screen and (min-width: 768px) {
	.service-summary__content {
		margin-top: 60px;
	}
}

.waglpedia__service--collapsed {
	margin: 0 -15px;
	padding: 50px 15px;
	background-color: #ECFAF5;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service--collapsed {
		padding: 70px 100px;
	}
}

.waglpedia__service-image {
	width: 20%;
	margin-bottom: 30px;
	opacity: 0.6;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-image {
		margin-bottom: 60px 0;
	}
}

.waglpedia__service-name {
	margin-bottom: 30px;
	font-weight: 700;
	font-size: 2.5em;
	color: #004d2f;
	text-align: center;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-name {
		margin-bottom: 60px;
	}
}

.waglpedia__service-name--collapsed {
	font-weight: 700;
	font-size: 2.0em;
	color: #004d2f;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-name--collapsed {
		font-size: 2.5em;
	}
}

.waglpedia__service-tags--collapsed {
	margin: 20px 0 25px 0;
}

.waglpedia__service-tag {
	display: inline-block;
	margin: 5px;
	padding: 5px 10px;
	border-radius: 15px;
	background-color: #16b475;
	font-size: 0.9em;
	color: white;
}

.waglpedia__service-screenshot {
	width: 100%;
}
@media only screen and (min-width: 768px) {
	.waglpedia__service-screenshot {
		width: 70%;
		margin: 15px auto;
	}
}

.waglpedia__explanation-category {
	margin: 30px 0 20px 0;
	font-weight: 700;
	font-size: 1.3em;
	color: #16b475;
}
@media only screen and (min-width: 768px) {
	.waglpedia__explanation-category {
		font-size: 2.0em;
	}
}
/* ... */

